@@ -1,18 +1,21 @@
 package observer.quantum.worm.project;
 
+import observer.quantum.worm.user.User;
+import observer.quantum.worm.user.UserService;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
+import org.mockito.ArgumentCaptor;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.MockitoAnnotations;
+import org.springframework.security.access.AccessDeniedException;
 
 import java.util.ArrayList;
 import java.util.Date;
 import java.util.List;
 import java.util.Optional;
 
-import static org.junit.jupiter.api.Assertions.assertEquals;
-import static org.junit.jupiter.api.Assertions.assertNotNull;
+import static org.junit.jupiter.api.Assertions.*;
 import static org.mockito.Mockito.*;
 
 public class ProjectServiceTest {
@@ -23,39 +26,51 @@ public class ProjectServiceTest {
     @Mock
     private ProjectRepository projectRepository;
 
+    @Mock
+    private UserService userService;
+
     private Project project;
+    private User user;
 
     @BeforeEach
     public void setUp() {
         MockitoAnnotations.openMocks(this);
+
+        user = new User();
+        user.setId("userId");
+        user.setUsername("testUser");
+
         project = new Project();
         project.setId("1");
         project.setTitle("My Project");
         project.setDescription("Project Description");
         project.setStatus("Writing");
+        project.setUser(user);
         project.setCreatedDate(new Date());
         project.setUpdatedDate(new Date());
+
+        when(userService.getCurrentUser()).thenReturn(Optional.of(user));
     }
 
     @Test
-    public void testFindAll() {
+    public void testFindAllForCurrentUser() {
         List<Project> projects = new ArrayList<>();
         projects.add(project);
 
-        when(projectRepository.findAll()).thenReturn(projects);
+        when(projectRepository.findByUser(user)).thenReturn(projects);
 
-        List<Project> result = projectService.findAll();
+        List<Project> result = projectService.findAllForCurrentUser();
 
         assertEquals(1, result.size());
-        assertEquals("My Project", result.getFirst().getTitle());
-        verify(projectRepository, times(1)).findAll();
+        assertEquals("My Project", result.get(0).getTitle());
+        verify(projectRepository, times(1)).findByUser(user);
     }
 
     @Test
-    public void testFindById() {
+    public void testFindByIdForCurrentUser_Success() {
         when(projectRepository.findById("1")).thenReturn(Optional.of(project));
 
-        Project result = projectService.findById("1");
+        Project result = projectService.findByIdForCurrentUser("1");
 
         assertNotNull(result);
         assertEquals("My Project", result.getTitle());
@@ -63,23 +78,62 @@ public class ProjectServiceTest {
     }
 
     @Test
-    public void testCreate() {
-        when(projectRepository.save(any(Project.class))).thenReturn(project);
+    public void testFindByIdForCurrentUser_AccessDenied() {
+        User otherUser = new User();
+        otherUser.setId("otherUserId");
+        project.setUser(otherUser);
 
-        Project result = projectService.create(project);
+        when(projectRepository.findById("1")).thenReturn(Optional.of(project));
 
-        assertNotNull(result);
-        assertEquals("My Project", result.getTitle());
-        verify(projectRepository, times(1)).save(any(Project.class));
+        assertThrows(AccessDeniedException.class, () -> projectService.findByIdForCurrentUser("1"));
     }
 
     @Test
-    public void testUpdate() {
+    public void testCreate() {
+        // Prepare
+        Project newProject = new Project();
+        newProject.setTitle("New Project");
+        newProject.setDescription("New Description");
+
+        // We need to capture the Project being saved to verify its contents
+        ArgumentCaptor<Project> projectCaptor = ArgumentCaptor.forClass(Project.class);
+
+        // Mock behavior
+        when(projectRepository.save(any(Project.class))).thenAnswer(invocation -> {
+            Project savedProject = invocation.getArgument(0);
+            savedProject.setId("generatedId"); // Simulate ID generation
+            return savedProject;
+        });
+
+        // Act
+        Project result = projectService.create(newProject);
+
+        // Assert
+        assertNotNull(result);
+        assertEquals("New Project", result.getTitle());
+        assertEquals("New Description", result.getDescription());
+        assertEquals(user, result.getUser());
+        assertNotNull(result.getId());
+        assertNotNull(result.getCreatedDate());
+        assertNotNull(result.getUpdatedDate());
+
+        // Verify
+        verify(projectRepository).save(projectCaptor.capture());
+        Project capturedProject = projectCaptor.getValue();
+        assertEquals(user, capturedProject.getUser());
+        assertNotNull(capturedProject.getCreatedDate());
+        assertNotNull(capturedProject.getUpdatedDate());
+    }
+
+
+    @Test
+    public void testUpdate_Success() {
         when(projectRepository.findById("1")).thenReturn(Optional.of(project));
         when(projectRepository.save(any(Project.class))).thenReturn(project);
 
-        project.setTitle("Updated Project");
-        Project result = projectService.update("1", project);
+        Project updatedProject = new Project();
+        updatedProject.setTitle("Updated Project");
+        Project result = projectService.update("1", updatedProject);
 
         assertNotNull(result);
         assertEquals("Updated Project", result.getTitle());
@@ -88,12 +142,37 @@ public class ProjectServiceTest {
     }
 
     @Test
-    public void testDelete() {
+    public void testUpdate_AccessDenied() {
+        User otherUser = new User();
+        otherUser.setId("otherUserId");
+        project.setUser(otherUser);
+
+        when(projectRepository.findById("1")).thenReturn(Optional.of(project));
+
+        Project updatedProject = new Project();
+        updatedProject.setTitle("Updated Project");
+
+        assertThrows(AccessDeniedException.class, () -> projectService.update("1", updatedProject));
+    }
+
+    @Test
+    public void testDelete_Success() {
         when(projectRepository.findById("1")).thenReturn(Optional.of(project));
         doNothing().when(projectRepository).delete(any(Project.class));
 
         projectService.delete("1");
 
         verify(projectRepository, times(1)).delete(project);
+    }
+
+    @Test
+    public void testDelete_AccessDenied() {
+        User otherUser = new User();
+        otherUser.setId("otherUserId");
+        project.setUser(otherUser);
+
+        when(projectRepository.findById("1")).thenReturn(Optional.of(project));
+
+        assertThrows(AccessDeniedException.class, () -> projectService.delete("1"));
     }
 }
